--- a/IceGame/src/G24_Jaumira_AR2/G24_Jaumira_AR2.vcxproj.filters
+++ b/IceGame/src/G24_Jaumira_AR2/G24_Jaumira_AR2.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Player.h">
       <Filter>Archivos de encabezado\Modelo\MapElements</Filter>
     </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>Archivos de encabezado\Modelo\MapElements</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Renderer.cpp">
@@ -114,6 +117,9 @@
       <Filter>Archivos de recursos\Modelo\Scenes</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>Archivos de recursos\Modelo\MapElements</Filter>
+    </ClCompile>
+    <ClCompile Include="Map.cpp">
       <Filter>Archivos de recursos\Modelo\MapElements</Filter>
     </ClCompile>
   </ItemGroup>
