--- a/IceGame/src/G24_Jaumira_AR2/G24_Jaumira_AR2.vcxproj
+++ b/IceGame/src/G24_Jaumira_AR2/G24_Jaumira_AR2.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="DeltaTime.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Hud.cpp" />
     <ClCompile Include="InputManager.cpp" />
